--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anime-api",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -40,4 +41,5 @@
   "devDependencies": {
     "firestore-export-import": "^0.5.0"
   }
+
 }
